--- a/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
+++ b/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanArchitecture.Application\CleanArchitecture.Application.csproj" />
+    <ProjectReference Include="..\..\Core\CleanArchitecture.Domain\CleanArchitecture.Domain.csproj" />
   </ItemGroup>
 
 </Project>
