Implementacion de update y delete command. Implementacion de validaciones con Validator. Implementación de excepciones

--- a/src/Core/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/src/Core/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -11,8 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Feature\" />
     <Folder Include="Behaviours\" />
+    <Folder Include="Feature\Streamers\Queries\" />
+    <Folder Include="Feature\Videos\Commands\" />
   </ItemGroup>
 
   <ItemGroup>
