--- a/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
+++ b/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
   <ItemGroup>
