--- a/src/API/CleanArchitecture.API/appsettings.json
+++ b/src/API/CleanArchitecture.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=localhost; Initial Catalog=Streamer; Integrated Security=True"
+  },
+  "EmailSettings": {
+    "FromAddress": "mariana1996.mph@gmail.com",
+    "ApiKey": "",
+    "FromName": "MarianaMph"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
