--- a/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
+++ b/src/Infrastructure/CleanArchitecture.Infrastucture/CleanArchitecture.Infrastucture.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Core\CleanArchitecture.Domain\CleanArchitecture.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
