--- a/src/Infrastructure/CleanArchitecture.Identity/CleanArchitecture.Identity.csproj
+++ b/src/Infrastructure/CleanArchitecture.Identity/CleanArchitecture.Identity.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\CleanArchitecture.Application\CleanArchitecture.Application.csproj" />
+  </ItemGroup>
+
 </Project>
