--- a/src/API/CleanArchitecture.API/appsettings.json
+++ b/src/API/CleanArchitecture.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=localhost; Initial Catalog=Streamer; Integrated Security=True"
+    "ConnectionString": "Data Source=localhost; Initial Catalog=Streamer; Integrated Security=True",
+    "IdentityConnectionString": "Data Source=localhost; Initial Catalog=Security; Integrated Security=True"
   },
   "EmailSettings": {
     "FromAddress": "mariana1996.mph@gmail.com",
@@ -13,5 +14,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "HolaMundo",
+    "Issuer": "CleanArquitectureMarianaMph",
+    "Audience": "CleanArquitectureUsers",
+    "DurationInMinutues":  360
+  }
 }
