Creación de controller Account

--- a/src/API/CleanArchitecture.API/appsettings.json
+++ b/src/API/CleanArchitecture.API/appsettings.json
@@ -16,9 +16,9 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Key": "HolaMundo",
+    "Key": "this is my custom Secret key for authentication",
     "Issuer": "CleanArquitectureMarianaMph",
     "Audience": "CleanArquitectureUsers",
-    "DurationInMinutues":  360
+    "DurationInMinutues": 360
   }
 }
