Pruebas unitarias para operaciones de Streamers

--- a/test/CleanArchitecture.Application.UnitTests/CleanArchitecture.Application.UnitTests.csproj
+++ b/test/CleanArchitecture.Application.UnitTests/CleanArchitecture.Application.UnitTests.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Directors\" />
     <Folder Include="Features\Videos\Commands\" />
   </ItemGroup>
 
